--- a/references.bib
+++ b/references.bib
@@ -12,6 +12,13 @@
   publisher	= {Now Publishers, Inc.}
 }
 
+@phdthesis{adam2017,
+  title={Systems, generativity and interactional effects},
+  author={Adam, Elie M},
+  year={2017},
+  school={Massachusetts Institute of Technology}
+}
+
 @article{lee2022b,
   title={The state-of-the-art on tours for dynamic visualization of high-dimensional data},
   author={Lee, Stuart and Cook, Dianne and da Silva, Natalia and Laa, Ursula and Spyrison, Nicholas and Wang, Earo and Zhang, H Sherry},
